[package]
name = "snake"
version = "0.1.0"
authors = ["stardreamer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks", "vulkan"]}
serde = { version = "1.0", features = ["derive"] }